--- a/style.css
+++ b/style.css
@@ -1,10 +1,62 @@
+body {
+  background-color: rgb(136, 130, 130);
+}
+
 #cor {
-    color: 168, 34, 1;
+  color: 168, 34, 1;
 }
 
 .ball {
-    background: lightblue;
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
 }
+
+/* .azul {
+  background-color: blue;
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+}
+
+.vermelho {
+  background-color: rgb(235, 46, 13);
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+}
+
+.verde {
+  background-color: rgb(5, 143, 5);
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+}
+
+.rosa {
+  background-color: rgb(252, 2, 239);
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+}
+
+.laranla {
+  background-color: rgb(241, 146, 3);
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+}
+
+.azul {
+  background-color: blue;
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+} */
+
+/* .eu {
+  background: lightblue;
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+} */
